<resources>
    <string name="app_name">AppEntrega1Projeto</string>
    <string name="username">Username:</string>
    <string name="email">email</string>
    <string name="street">Street</string>
    <string name="suite">Suite</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string-array name="labels_array">
        <item>Wanderson</item>
        <item>Felipe</item>
        <item>Marco</item>
        <item>Rogerio</item>
    </string-array>
</resources>
